# powerimaginatorclient

./: .gitignore  .gitmodules  CMakeLists.txt  vcpkg.json
.github/workflows/: release-macos.yml  release-windows.yml
branding/: Info.plist
cmake/: FixBundleWindows.cmake.in
shaders/: downsample.frag  eraser_2d_preview.frag  hpr.frag  keypoints.frag  multiply_visibility.frag  paint_brush.frag  points.frag  points.vert  pull_color.frag  push_color.frag
src/: alignment_tool.cpp  alignment_tool.h  app.cpp  app.h  autoeraser.cpp  autoeraser.h  camera_tool.cpp  camera_tool.h  eraser_2d_tool.cpp  eraser_2d_tool.h  exchange.cpp  exchange.h  fly_camera.cpp  fly_camera.h  gl_render_pass.cpp  gl_shader.cpp  gl_shader.h  gl_vertex_buffers.h  io_utils.cpp  io_utils.h  login_screen.cpp  login_screen.h  main.cpp  meshgrid_utils.cpp  meshgrid_utils.h  paint_result_tool.cpp  paint_result_tool.h  paint_tool.cpp  paint_tool.h  pch.h  points_renderer.cpp  points_renderer.h
